--- a/app/views/professors/index.html.erb
+++ b/app/views/professors/index.html.erb
@@ -1,42 +1,81 @@
-<div class="container">
-  <p id="notice"><%= notice %></p>
+<p id="notice"><%= notice %></p>
 
-  <h1 class="title">Profesores</h1>
+<h1>Pacientes</h1>
 
-  <table>
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Father last name</th>
-        <th>Mother last name</th>
-        <th>Email</th>
-        <th>Office</th>
-        <th>Resume</th>
-        <th>Type</th>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
+<!DOCTYPE html>
+<html>
 
-    <tbody>
-      <% @professors.each do |professor| %>
-        <tr>
-          <td><%= professor.name %></td>
-          <td><%= professor.father_last_name %></td>
-          <td><%= professor.mother_last_name %></td>
-          <td><%= professor.email %></td>
-          <td><%= professor.office %></td>
-          <td><%= professor.resume %></td>
-          <td><%= professor.professor_type %></td>
-          <td><%= link_to 'Show', professor %></td>
-          <td><%= link_to 'Edit', edit_professor_path(professor) %></td>
-          <td><%= link_to 'Destroy', professor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
+  <head>
+    <meta charset="utf-8" />
+    <title>Pacientes</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  </head>
 
-  <br>
-  <% if @curr_user.admin%>
-    <%= link_to 'New Professor', new_professor_path %>
-  <% end %>
-</div>
+  <body>
+    <div id="wrapper">
+      <!-- Page Content -->
+      <div id="page-content-wrapper">
+        <div class="container-fluid">
+          <div class="row margin-row">
+            <div class="col-lg-8"></div>
+          </div>
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="panel panel-default">
+                <div class="panel-body">
+                  <div class="pull-left">
+                    <%= link_to 'New Professor', new_professor_path,  class: "btn btn-primary" %>
+                  </div>
+                  <!-- /Select -->
+                  <!-- Table -->
+
+                  <table class="table table-striped table-bordered">
+                    <thead>
+                      <tr>
+                        <th>Nombre</th>
+                        <th>Apellido paterno</th>
+                        <th>Apellido materno</th>
+                        <th>Email</th>
+                        <th>Oficina</th>
+                        <th>Resumen</th>
+                        <th>Tipo</th>
+                        <th colspan="2">Acción</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <% @professors.each do |professor| %>
+                        <tr>
+                          
+                          <td><%= professor.father_last_name %></td>
+                          <td><%= professor.mother_last_name %></td>
+                          <td><%= professor.email %></td>
+                          <td><%= professor.office %></td>
+                          <td><%= professor.resume %></td>
+                          <td><%= professor.type %></td>
+                          <td><%= link_to 'Show', professor %></td>
+                          <td><%= link_to 'Edit', edit_professor_path(professor) %></td>
+                          <td><%= link_to 'Destroy', professor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                        </tr>
+                      <% end %>
+                    </tbody>
+                  </table>
+                  <div class="alert alert-warning" role="alert" id="warning_message">
+                    <i class="fas fa-exclamation-triangle"></i> No se han encontrado resultados.</div>
+                </div>
+              </div>
+            </div>
+            <!-- /.col-lg-12 -->
+          </div>
+        </div>
+      </div>
+      <!-- /#page-content-wrapper -->
+    </div>
+    <!-- /#wrapper -->
+    <!-- JAVASCRIPT -->
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+      crossorigin="anonymous"></script>
+    <script type="text/javascript" src="./../../../js/patient-dashboard.js"></script>
+
+  </body>
+
+</html>
