--- a/app/views/professors/index.html.erb
+++ b/app/views/professors/index.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Pacientes</h1>
+<h2></h2>
 
 <!DOCTYPE html>
 <html>
 
   <head>
     <meta charset="utf-8" />
-    <title>Pacientes</title>
+    <title>Profesores</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   </head>
 
@@ -20,6 +20,7 @@
             <div class="col-lg-8"></div>
           </div>
           <div class="row">
+            <h2>Profesores</h2>
             <div class="col-lg-12">
               <div class="panel panel-default">
                 <div class="panel-body">
@@ -38,20 +39,18 @@
                         <th>Email</th>
                         <th>Oficina</th>
                         <th>Resumen</th>
-                        <th>Tipo</th>
-                        <th colspan="2">Acción</th>
+                        <th colspan="3">Acción</th>
                       </tr>
                     </thead>
                     <tbody>
                       <% @professors.each do |professor| %>
                         <tr>
-                          
+                          <td><%= professor.name %></td>
                           <td><%= professor.father_last_name %></td>
                           <td><%= professor.mother_last_name %></td>
                           <td><%= professor.email %></td>
                           <td><%= professor.office %></td>
                           <td><%= professor.resume %></td>
-                          <td><%= professor.type %></td>
                           <td><%= link_to 'Show', professor %></td>
                           <td><%= link_to 'Edit', edit_professor_path(professor) %></td>
                           <td><%= link_to 'Destroy', professor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
