--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -26,7 +26,7 @@
       <%= form.text_field :password_confirmation, class:"form-control" , placeholder: "Confirmar Contraseña" %>
     </div>
 
-    <% if @curr_user.admin %>
+    <% if current_user.admin %>
       <div class="form-group">
         <%= form.label :admin %>
         <%= form.check_box :admin %>
