--- a/app/views/professors/show_card.html.erb
+++ b/app/views/professors/show_card.html.erb
@@ -1,3 +1,43 @@
 <div class="container">
-    <h2 class="title">Hi</h2>
+  <h2 class="title">Mostrar Profesor</h2>
+  <p id="notice"><%= notice %></p>
+
+  <p class="text-center">
+    <strong>Nombre:</strong>
+    <%= @professor.name %>
+  </p>
+
+  <p class="text-center">
+    <strong>Apellido Paterno:</strong>
+    <%= @professor.father_last_name %>
+  </p>
+
+  <p class="text-center">
+    <strong>Apellido Materno:</strong>
+    <%= @professor.mother_last_name %>
+  </p>
+
+  <p class="text-center">
+    <strong>Correo:</strong>
+    <%= @professor.email %>
+  </p>
+
+  <p class="text-center">
+    <strong>Oficina:</strong>
+    <%= @professor.office %>
+  </p>
+
+  <p class="text-center">
+    <strong>CV:</strong>
+    <%= @professor.resume %>
+  </p>
+
+  <p class="text-center">
+    <strong>Tipo de Profesor:</strong>
+    <%= @professor.professor_type %>
+  </p>
+  <p class="text-center">
+    <%= link_to 'Editar', edit_professor_path(@professor) , :class => 'btn btn-sm btn-primary'%> |
+    <%= link_to 'Regresar', professors_path, :class => 'btn btn-sm btn-primary' %>
+  </p>
 </div>
