--- a/app/views/home/show_professor.html.erb
+++ b/app/views/home/show_professor.html.erb
@@ -1,6 +1,10 @@
 <div class="container">
   <p id="notice"><%= notice %></p>
   <h2 class="title">Lista de profesores</h2>
+  <%= form_tag(professors_grid_path, method: :get) do %>
+    <%= text_field_tag :search %>
+    <%= submit_tag "Search" %>
+  <% end %>
   <div class="cards">
     <% @professors.each do |professor| %>
         <div class="card">
