--- a/app/views/professors_grid/index.html.erb
+++ b/app/views/professors_grid/index.html.erb
@@ -2,24 +2,31 @@
 
     <div class="container">
 
-
         <h2 class="title">Lista de profesores</h2>
+
+        <h4>Busqueda por nombre: </h4>
+
+        <%= form_tag(professors_grid_path, method: :get) do %>
+          <%= text_field_tag :search %>
+          <%= submit_tag "Search" %>
+        <% end %> 
+
+        Planta: <%= check_box_tag 'tipo_prof', '1' , true, onclick: "alert('hello world')"%>
       
       <div class="cards">
 
       <% @professors.each do |professor| %>
-        
         <div class="card">
           <div class="card__inner">
             <i class="fa fa-user-tie"></i>
-            <p><%= professor.name %> <%= professor.father_last_name %> <%= professor.mother_last_name %></p>
+            <p><%= professor.name %></p>
             <%= link_to professor_path(professor) do %>
               <i class="btn fas fa-info-circle fa-sm" aria-hidden="true"></i>
             <%end%>
           </div>
         </div>
-
       <%end%>
+
       </div>
     </div>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
